# hawkeye

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.native  README.md  RELEASE.md  action.yml  hack.sh  licenserc.toml  pom.xml  pyproject.toml  release.py  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml  semantic.yml
.github/actions/docker-build/: action.yml
.github/actions/docker-push-by-digest/: action.yml
.github/actions/docker-release/: action.yml
.github/workflows/: ci.yml  docker.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  main.rs  subcommand.rs  version.rs
distribution/: pom.xml
distribution/action/: Dockerfile  README.md  action.yml
distribution/commandline/: pom.xml
distribution/commandline/src/: embeddedLaunchScript.sh
distribution/commandline/src/assemble/: bin.xml
distribution/native/: .gitignore  clean_native.sh  make_native.sh  pom.xml
distribution/releasehelper/: pom.xml
fmt/: Cargo.toml
fmt/src/: config.rs  error.rs  git.rs  lib.rs  main.rs  processor.rs  selection.rs
fmt/src/config/: mod.rs
fmt/src/document/: defaults.toml  factory.rs  mod.rs  model.rs
fmt/src/header/: defaults.toml  matcher.rs  mod.rs  model.rs  parser.rs
fmt/src/license/: Apache-2.0.txt  Elastic-2.0.txt  mod.rs
fmt/tests/: tests.rs
fmt/tests/content/: empty.py  two_headers.rs
hawkeve-maven-plugin/: pom.xml
hawkeve-maven-plugin/src/main/java/io/korandoru/hawkeye/: AbstractMojo.java  CheckMojo.java  FormatMojo.java  RemoveMojo.java
hawkeye-cli/: pom.xml
hawkeye-cli/src/assemble/: bin.xml
hawkeye-command/: pom.xml
hawkeye-command/src/main/java-filtered/io/korandoru/hawkeye/command/: CommandConstantsFiltered.java
hawkeye-command/src/main/java/io/korandoru/hawkeye/command/: CommandConstants.java  CommandOptions.java  HawkEyeCommandCheck.java  HawkEyeCommandFormat.java  HawkEyeCommandMain.java  HawkEyeCommandRemove.java  HawkEyeVersionProvider.java
hawkeye-core/: pom.xml
hawkeye-core/native/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
hawkeye-core/native/src/: error.rs  lib.rs  main.rs
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/: Constants.java  Default.java  FileContent.java  GitHelper.java  HawkEyeConfig.java  Header.java  HeaderDefinition.java  HeaderParser.java  HeaderSource.java  HeaderType.java  LicenseChecker.java  LicenseFormatter.java  LicenseProcessUtils.java  LicenseProcessor.java  LicenseRemover.java  LiteralHeaderSource.java  MatchPattern.java  OldGitHelper.java  Report.java  ResourceFinder.java  ResourceNotFoundException.java  Selection.java  UrlHeaderSource.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/config/: ConfigFileModel.java  ConfigModel.java  FeatureGate.java  GitModel.java  HawkEyeConfig.java  HawkEyeModel.java  HeaderStyleModel.java  HeaderStylesModel.java  LicenseRCModel.java  MappingModel.java  MappingsModel.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/document/: Document.java  DocumentFactory.java  DocumentPropertiesLoader.java  DocumentType.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/header/: Header.java  HeaderDefinition.java  HeaderParser.java  HeaderType.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/mapping/: Mapping.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/model/: HawkEyeConfig.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/report/: Report.java  ReportConstants.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/resource/: HeaderSource.java  LiteralHeaderSource.java  ResourceFinder.java  ResourceNotFoundException.java  UrlHeaderSource.java
hawkeye-core/src/main/java/io/korandoru/hawkeye/core/rust/: ResultException.java  (+1 more)
hawkeye-core/src/main/resources/: .gitignore  Apache-2.0.txt  hawkeye.toml
hawkeye-core/src/main/resources-filtered/: hawkeye.properties
hawkeye-core/src/test/data/compileCP/: test.txt  test2.txt  test3.txt  test4.txt
hawkeye-core/src/test/data/issue-110/: licenserc.toml  main.rs.formatted.expected
hawkeye-core/src/test/data/issue-113/: .gitignore  header.txt  licenserc-file.toml  licenserc.toml  main.rs  main.rs.formatted.expected
hawkeye-core/src/test/java/io/korandoru/hawkeye/core/: ConstantsTest.java  FileContentTest.java  HeaderDefinitionTest.java  HeaderParserTest.java  HeaderSourceTest.java  HeaderTest.java  HeaderTypeTest.java  MatchPatternTest.java  RegressionTest.java  ResourceFinderTest.java  SelectionTest.java
hawkeye-core/src/test/resources/: test-header2.txt
hawkeye-core/src/test/resources/doc/: doc1.toml  doc2.toml  doc3.toml
hawkeye-gradle-plugin/: .gitignore  README.md  build.gradle  pom.xml  settings.gradle
hawkeye-gradle-plugin/plugin/: build.gradle
hawkeye-gradle-plugin/src/test/resources/: t1.toml
hawkeye-maven-plugin/: README.md  pom.xml
hawkeye-maven-plugin/src/main/java/io/korandoru/hawkeye/: AbstractMojo.java  CheckMojo.java  FormatMojo.java  RemoveMojo.java
hawkeye-maven-plugin/src/test/java/io/korandoru/hawkeye/: CheckMojoTest.java  FormatMojoTest.java  RemoveMojoTest.java  package-info.java
hawkeye-maven-plugin/src/test/resources/: t1.toml  t2.toml
hawkeye-native/: pom.xml
tests/: .gitignore  it.py
tests/attrs_and_props/: license.txt  licenserc.toml  main.rs.expected
tests/bom_issue/: headerless_bom.cs  headerless_bom.cs.expected  headless_bom.cs  headless_bom.cs.expected  license.txt  licenserc.toml  style.toml
tests/disk_file_created_year/: license.txt  licenserc.toml  main.rs.expected
tests/disk_file_creation_year/: license.txt  main.rs.expected
tests/git_year_with_merge/: a.rs  a.rs.expected  b.rs  b.rs.expected  licenserc.toml  setup.py
tests/load_header_path/: license.txt  licenserc.toml  main.rs.expected
tests/regression_blank_line/: licenserc.toml  main.rs
tests/regression_no_blank_lines/: licenserc.toml  repro.py  repro.py.expected
tools/: update-action-image-url.py
tools/ci/: license-header-override-styles.xml  license-header-template.txt  licenserc.toml
(+23 files in other folders)
