# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Copyright 2024 - 2024, tison <wander4096@gmail.com> and the HawkEye contributors
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "cli",
    "fmt",
]
resolver = "2"

[workspace.package]
version = "5.7.0"
edition = "2021"
authors = ["tison <wander4096@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/korandoru/hawkeye/"
rust-version = "1.76.0"

[workspace.dependencies]
hawkeye-fmt = { version = "5.7.0", path = "fmt" }
snafu = "0.8.2"
toml = "0.8.12"
tracing = "0.1.40"

[workspace.metadata.release]
sign-tag = true
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"

[workspace.metadata.dist]
cargo-dist-version = "0.12.0"
ci = ["github"]
installers = ["shell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"
install-updater = false

# 'cargo dist' build with this profile
[profile.dist]
inherits = "release"
lto = "thin"
