# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["cli", "fmt"]
resolver = "2"

[workspace.package]
version = "6.0.0"
edition = "2021"
authors = ["tison <wander4096@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/korandoru/hawkeye/"
rust-version = "1.76.0"

[workspace.dependencies]
hawkeye-fmt = { version = "6.0.0", path = "fmt" }

anyhow = { version = "1.0.94" }
build-data = { version = "0.2.1" }
clap = { version = "4.5.23", features = ["derive"] }
const_format = { version = "0.2.34" }
log = { version = "0.4.22", features = ["kv_serde", "serde"] }
shadow-rs = { version = "0.38.0" }
toml = { version = "0.8.19" }

[workspace.metadata.release]
sign-tag = true
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# 'cargo dist' build with this profile
[profile.dist]
inherits = "release"
lto = "thin"
