# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Copyright 2024 - 2024, tison <wander4096@gmail.com> and the HawkEye contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hawkeye"
description = "Simple license header checker and formatter, in multiple distribution forms."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
const_format = { workspace = true }
hawkeye-fmt = { workspace = true }
log = { workspace = true }
logforth = { version = "0.11", features = ["env-filter"] }
shadow-rs = { workspace = true }

[build-dependencies]
build-data = { workspace = true }
shadow-rs = { workspace = true }
