# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "hawkeye"
description = "Simple license header checker and formatter, in multiple distribution forms."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
const_format = { workspace = true }
hawkeye-fmt = { workspace = true }
log = { workspace = true }
logforth = { version = "0.29.1", features = ["starter-log"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
shadow-rs = { workspace = true }

[build-dependencies]
build-data = { workspace = true }
shadow-rs = { workspace = true, features = ["build"] }
gix-discover = { version = "0.46.0" }
