# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Copyright 2024 - 2024, tison <wander4096@gmail.com> and the HawkEye contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hawkeye-fmt"
description = "The formatter library for hawkeye cli."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
gix = { version = "0.64", default-features = false, features = [
    "blob-diff",
    "excludes",
] }
ignore = "0.4"
log = { workspace = true }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
toml = { workspace = true }
walkdir = "2.5"
